# rust-displayconfig

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/Headers/MonitorPanel.framework/Headers/: MPDisplayModeBucket.h  NSUUID-Compare.h
src/commands/: get_brightness.rs  get_display_mode.rs  list_displays.rs  mod.rs  set_brightness.rs  set_display_mode.rs  watch.rs
src/monitor_panel/: mod.rs  monitor_panel.rs
