[package]
name = "displayconfig"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
lto = true

[dependencies]
core-graphics = "0.23"
objc = "0.2"
objc-foundation = "0.1"
cocoa = "0.24"
clap = { version = "4.5", features = ["derive"] }
block = "0.1"

[build-dependencies]
bindgen = "0.70"


# Mode 48 -- we were on mode 80
